kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo5
  namespace: homework
  labels:
    app: demo5
spec:
  selector:
    matchLabels:
      app: demo5
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: demo5
    spec:
      serviceAccountName: monitoring
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: homework
                    operator: In
                    values:
                      - "true"
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args: [
            "curl -X GET $(CLUSTER_URL)/apis/metrics.k8s.io/v1beta1/nodes/minikube --header 'Authorization: Bearer $(TOKEN)' --insecure >/homework/metrics.html 2>/dev/null && \
            echo 'server { listen $(CUSTOM_PORT); location / { root $(CUSTOM_ROOT); try_files $uri $uri/ index index.html; } }' \
            >> /etc/nginx/conf.d/default.conf && \
            nginx -g 'daemon off;'"
          ]
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", 'rm /homework/index.html /homework/metrics.html']
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: workdir
              mountPath: /homework
            - name: my-vol-cm
              mountPath: "/homework/conf"
              readOnly: true
      # These containers are run during pod initialization
      dnsPolicy: Default
      volumes:
        - name: workdir
          persistentVolumeClaim:
            claimName: demo5-pvc
            readOnly: false
        - name: my-vol-cm
          configMap:
            name: demo5-cm
            items:
              - key: "text.properties"
                path: "file"
