kubernetes-security/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo5
  namespace: homework
  labels:
    app: demo5
spec:
  # sessionAffinity: ClientIP
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
  selector:
    app: demo5
